objects/ssot__AdverseEventAction__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ActionCodeId__c</fullName>
        <label>Action Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ActionCodeObject__c</fullName>
        <label>Action Code Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ActionReferenceId__c</fullName>
        <label>Action Reference</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ActionReferenceObject__c</fullName>
        <label>Action Reference Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ActionType__c</fullName>
        <label>Action Type</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AdverseEventId__c</fullName>
        <label>Adverse Event</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Adverse Event Action Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716722924681_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AdverseEventAction_AdverseEventId_ma_rel</label>
        <referenceTo>ssot__AdverseEvent__dlm</referenceTo>
        <relationshipLabel>AdverseEventAction_AdverseEventId_ma_rel</relationshipLabel>
        <relationshipName>rel_1716722924681_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716722926120_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AdverseEventAction_ActionReferenceId_rel</label>
        <referenceTo>ssot__PatientMedicalProcedure__dlm</referenceTo>
        <relationshipLabel>AdverseEventAction_ActionReferenceId_rel</relationshipLabel>
        <relationshipName>rel_1716722926120_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716722927544_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AdverseEventAction_ActionReferenceId_rel</label>
        <referenceTo>ssot__PatientMedicationRequest__dlm</referenceTo>
        <relationshipLabel>AdverseEventAction_ActionReferenceId_rel</relationshipLabel>
        <relationshipName>rel_1716722927544_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>